correções ticket controller